feat: add member registation api
